# stunning-enigma

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.sh
app/: ai_agent.py  beautifier.py  main.py  utils.py
frontend/: app.js  excel-optimizer.html  index.html
tests/: test_api.py  test_beautifier.py  test_utils.py
